syntax = "proto3";
package api;
option go_package = "api/api;api";
import "google/api/annotations.proto";

message GetFitsFilesRequest {
    string data = 1;
}

message GetFitsFilesResponse {
    string metadata = 1;
}

message TestClientRequest {
    string msg = 1;
}

message TestClientResponse {
    string msg = 1;
}

message UploadFitsFilesRequest {
    string name = 1;
    string fileContent = 2;
}

message UploadFitsFilesResponse {
    string metadata = 1;
}

message GetMovieRequest {
    string filePath = 1;
}

message GetMovieResponse {
    string movLoc = 1;
}

service fitsService {
    rpc GetMovie(GetMovieRequest) returns (GetMovieResponse) {
        option (google.api.http) = {
            post: "/api/fits/movie"
            body: "*"
        };
    };

    rpc GetFitsFiles(GetFitsFilesRequest) returns (GetFitsFilesResponse) {
        option (google.api.http) = {
            post: "/api/fits"
            body: "*"
        };

    };

    rpc UploadFitsFiles(UploadFitsFilesRequest) returns (UploadFitsFilesResponse) {
        option (google.api.http) = {
            post: "/api/fits/upload"
            body: "*"
        };
        // option (grpc.max_message_length) = (100 * 1024 * 1024);
    };

    rpc TestClient(TestClientRequest) returns (TestClientResponse) {
        option (google.api.http) = {
            post: "/api/test"
            body: "*"
        };
    };
}